sistemati messaggio di errore registrazione/accesso

--- a/html/accesso.html
+++ b/html/accesso.html
@@ -22,9 +22,9 @@
         <div class="btn">
             <input type="submit" name="REGISTRATI" value="ACCEDI">
         </div>
-         <p>
+         <div class="linkAccessoRegistra">
             Non hai ancora un profilo? <a href="registrazione.html">Crealo qui</a>
-        </p>
+        </div>
     </form>
     </body>
 </html>
