--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -38,9 +38,9 @@
         <div class="input-group"><br>
             <input type="submit" class="btn" name="REGISTRATI" value="EFFETTUA REGISTRAZIONE">
         </div>
-        <p><br>
+        <div class="linkAccessoRegistra"><br>
             Hai gia' un profilo utente? <a href="accesso.html">Clicca qui</a>
-        </p>
+        </div>
 	</form>
 </body>
 </html>
