--- a/html/acquistoBiglietto.html
+++ b/html/acquistoBiglietto.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Prenotazione Biglietto</title>
-    <link rel="icon" href="../IMG/logoPiccolo.ico" />
+    <link rel="icon" href="../images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
 </head>
 
