--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -8,62 +8,61 @@
 </head>
 
 <body>
+    <div class="contorno">
+        <div class="boxTornaIndietro">
+            <div class="tornaIndietro">
+                <a href="../index.php?pagina=$CITTA$">TORNA INDIETRO</a>
+            </div>
 
-    <div class="boxTornaIndietro">
-        <div class="tornaIndietro">
-            <a href="../index.php?pagina=$CITTA$">TORNA INDIETRO</a>
+            <div class="titoloAcquisto">
+                <h1>$TITOLO$</h1>
+            </div>
         </div>
 
-        <div class="titoloAcquisto">
-            <h1>$TITOLO$</h1>
+        <div class="boxAcquistoBiglietto">
+            <div class="scrittaAcquistoBiglietto">
+                Acquista i biglietti
+            </div>
+
+            <form method="post" action="../PHP/controlloPrenotazioni.php">
+                <div class="numeroBigliettiAcquistoBiglietti">
+                    Numero biglietti:
+                    <select id="calcolatrice" onchange="calcola()">
+                        <option value="0">Seleziona</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                    </select>
+                    x $PREZZO$ &euro;
+                </div>
+
+
+
+                <div class="inserisciAcquistaBiglietto">
+                    Nome: <br> <input type="text" name="nome">
+                </div>
+
+                <div class="inserisciAcquistaBiglietto">
+                    Cognome: <br> <input type="text" name="cognome">
+                </div>
+
+                <div class="inserisciAcquistaBiglietto">
+                    E-mail: <br>
+                    <input type="email" name="email">
+                </div>
+
+
+                <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+
+            </form>
         </div>
     </div>
-
-    <div class="boxAcquistoBiglietto">
-        <div class="scrittaAcquistoBiglietto">
-            Acquista i biglietti
-        </div>
-
-        <form method="post" action="../PHP/controlloPrenotazioni.php">
-            <div class="numeroBigliettiAcquistoBiglietti">
-                Numero biglietti:
-                <select id="calcolatrice" onchange="calcola()">
-                    <option value="0">Seleziona</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                </select>
-                x $PREZZO$ &euro;
-            </div>
-
-
-
-            <div class="inserisciAcquistaBiglietto">
-                Nome: <br> <input type="text" name="nome">
-            </div>
-
-            <div class="inserisciAcquistaBiglietto">
-                Cognome: <br> <input type="text" name="cognome">
-            </div>
-
-            <div class="inserisciAcquistaBiglietto">
-                E-mail: <br>
-                <input type="email" name="email">
-            </div>
-
-            <div class="prenota">
-                <input type="submit" name="PRENOTAZIONE" value="PRENOTA">
-            </div>
-
-        </form>
-    </div>
-
 </body>
 
 </html>
