Nuovi articoli e ora ci sono i messaggi per ricerche fallite e date vuote

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -21,7 +21,7 @@
 
         <div class="boxAcquistoBiglietto">
             <div class="scrittaAcquistoBiglietto">
-                Acquista i biglietti
+                Prenota biglietti
             </div>
 
             <form method="post" action="../PHP/controlloPrenotazioni.php">
