--- a/html/citta.html
+++ b/html/citta.html
@@ -1,9 +1,9 @@
 <img src="$IMGCITTA$" alt="$ALT$" width="100%" height="auto">
 
 
-<div class="prova">
-    <a href="index.php?tipo=date&data=oggi"> OGGI >></a>
-    <a href="index.php?tipo=date&data=domani"> DOMANI >></a>
-    <a href="index.php?tipo=date&data=settimana">PROSSIMI 7 GIORNI >></a>
-    <a href="index.php?tipo=date&data=mese"> PROSSIMI 30 GIORNI >></a>
+<div class="bottoniEventi">
+    <a href="index.php?tipo=date&data=oggi">OGGI</a>
+    <a href="index.php?tipo=date&data=domani">DOMANI</a>
+    <a href="index.php?tipo=date&data=settimana">PROSSIMI 7 GIORNI</a>
+    <a href="index.php?tipo=date&data=mese">PROSSIMI 30 GIORNI</a>
 </div>
