--- a/html/accesso.html
+++ b/html/accesso.html
@@ -8,7 +8,7 @@
         <div class="header">
 	    Accedi
 	</div>
-    <form class="insertdata" method="post" action="../PHP/login.php">
+    <form class="insertdata" method="post" action="../php/login.php">
         <div class="input-group">
         <label>Username:</label>
 	    <input type="text" name="Username">
