--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -22,7 +22,7 @@
     <div class="header">
         Cambia Password:
     </div>
-    <form class="insertdata" method="POST" action="../PHP/modificapsw.php">
+    <form class="insertdata" method="POST" action="../php/modificapsw.php">
         <div class="input-group">
             <label>Vecchia Password:</label>
             <input type="password" name="Vecchiapsw">
