--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -42,7 +42,7 @@
 
     <div class='box_errore'>$MESSAGGIO$</div>
 
-    <form action="../PHP/logout.php">
+    <form action="../php/logout.php">
         <div class="logout"><br>
             <button>LOGOUT</button>
         </div>
