--- a/html/nuoviArticoli.html
+++ b/html/nuoviArticoli.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="aggiungiArticolo">
-        <form method="post" action="../PHP/nuoviArticoli.php">
+        <form method="post" action="../php/nuoviArticoli.php">
             <div class="sceltaCittaTipologia"><br>
                 <h4>- Citta di pubblicazione <sup>(*)</sup></h4>
                 <input type="radio" name="citta" value="padova"> Padova <br>
