--- a/html/nuoviArticoli.html
+++ b/html/nuoviArticoli.html
@@ -8,17 +8,12 @@
 
 <body>
 
-
-
-    <div class="boxTornaIndietroNuovoArticolo">
-        <div class="tornaIndietroNuovoArticolo">
-            <a href="../index.php">TORNA ALLA HOME DEL SITO</a>
-        </div>
-    </div>
-
     <div class="aggiungiArticolo">
         <form method="post" action="../php/nuoviArticoli.php">
-            <div class="sceltaCittaTipologia"><br>
+            <div class="sceltaCittaTipologia">
+                <div class="tornaIndietroNuovoArticolo">
+                    <a href="../index.php">TORNA ALLA HOME DEL SITO</a>
+                </div>
                 <h4>- Citta di pubblicazione <sup>(*)</sup></h4>
                 <input type="radio" name="citta" value="padova"> Padova <br>
                 <input type="radio" name="citta" value="vicenza"> Vicenza <br>
