--- a/html/accesso.html
+++ b/html/accesso.html
@@ -1,30 +1,33 @@
 <!DOCTYPE HTML>
    <html lang="it">
     <head>
-        <title>Accedi</title>
-        <link rel="stylesheet" type="text/css" href="../css/stile.css">
-    </head>
-    <body>
-        <div class="header">
-	    Accedi
-	</div>
-    <form class="insertdata" method="post" action="../php/login.php">
-        <div class="input-group">
-        <label>Username:</label>
-	    <input type="text" name="Username">
+    <title>Accedi</title>
+    <link rel="stylesheet" type="text/css" href="../css/stile.css">
+</head>
+
+<body>
+    <div class="testa">
+        Accedi
+    </div>
+    <form class="inserisciDati" method="post" action="../php/login.php">
+        <div class="input">
+            <label>Username:</label>
+            <input type="text" name="Username">
         </div>
 
-        <div class="input-group">
-        <label>Password:</label>
-        <input type="Password" name="Password">
+        <div class="input">
+            <label>Password:</label>
+            <input type="Password" name="Password">
         </div>
 
-        <div class="btn">
+        <div class="bottonee">
             <input type="submit" name="REGISTRATI" value="ACCEDI">
         </div>
-         <div class="linkAccessoRegistra">
-            Non hai ancora un profilo? <a href="registrazione.html">Crealo qui</a>
-        </div>
+
     </form>
-    </body>
+
+    <div class="linkAccessoRegistra">
+        Non hai ancora un profilo? <a href="registrazione.html">Crealo qui</a>
+    </div>
+</body>
 </html>
