--- a/html/accesso.html
+++ b/html/accesso.html
@@ -29,5 +29,10 @@
     <div class="linkAccessoRegistra">
         Non hai ancora un profilo? <a href="registrazione.html">Crealo qui</a>
     </div>
+
+    <div class="linkAccessoRegistra">
+        Torna alla <a href="../index.php">home</a> del sito
+    </div>
+
 </body>
 </html>
