--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -1,46 +1,61 @@
 <!DOCTYPE HTML>
 <html lang="it">
+
 <head>
-	<title>Pagina di registrazione nuovo utente</title>
-	<link rel="stylesheet" type="text/css" href="../css/stile.css">
+    <title>Pagina di registrazione nuovo utente</title>
+    <link rel="stylesheet" type="text/css" href="../css/stile.css">
 </head>
+
 <body>
 
-	<div class="header">
-	    Registrazione
-	</div>
+    <div class="testa">
+        Registrazione
+    </div>
 
-	<form class="insertdata" method="POST" action="../PHP/registrazione.php">
-	    <div class="input-group">
-        <label>E-mail:</label>
-	    <input type="email" name="Email">
+    <form class="inserisciDati" method="POST" action="../php/registrazione.php">
+        <div class="input">
+            <label>E-mail:</label>
+            <input type="email" name="Email">
         </div>
-        <div class="input-group">
-        <label>Username:</label>
-	    <input type="text" name="Username">
+
+        <div class="input">
+            <label>Username:</label>
+            <input type="text" name="Username">
         </div>
-        <div class="input-group">
-        <label>Nome:</label>
-        <input type="text" name="Nome">
+
+        <div class="input">
+            <label>Nome:</label>
+            <input type="text" name="Nome">
         </div>
-        <div class="input-group">
-        <label>Cognome:</label>
-        <input type="text" name="Cognome">
+
+        <div class="input">
+            <label>Cognome:</label>
+            <input type="text" name="Cognome">
         </div>
-        <div class="input-group">
-        <label>Password (minimo 8 caratteri):</label>
-        <input type="Password" name="Password">
+
+        <div class="input">
+            <label>Password (minimo 8 caratteri):</label>
+            <input type="Password" name="Password">
         </div>
-        <div class="input-group">
-        <label>Conferma Password:</label>
-        <input type="Password" name="Password2">
+
+        <div class="input">
+            <label>Conferma Password:</label>
+            <input type="Password" name="Password2">
         </div>
-        <div class="input-group"><br>
-            <input type="submit" class="btn" name="REGISTRATI" value="EFFETTUA REGISTRAZIONE">
+
+        <div class="bottonee">
+            <input type="submit" name="REGISTRATI" value="REGISTRATI">
         </div>
-        <div class="linkAccessoRegistra"><br>
-            Hai gia' un profilo utente? <a href="accesso.html">Clicca qui</a>
-        </div>
-	</form>
+    </form>
+
+    <div class="linkAccessoRegistra">
+        Hai gia' un profilo utente? <a href="accesso.html">Clicca qui</a>
+    </div>
+
+    <div class="linkAccessoRegistra">
+        Torna alla <a href="../index.php">home</a> del sito
+    </div>
+
 </body>
+
 </html>
