--- a/html/citta.html
+++ b/html/citta.html
@@ -2,8 +2,8 @@
 
 
 <div class="bottoniEventi">
-    <a href="index.php?tipo=date&data=oggi">OGGI</a>
-    <a href="index.php?tipo=date&data=domani">DOMANI</a>
-    <a href="index.php?tipo=date&data=settimana">PROSSIMI 7 GIORNI</a>
-    <a href="index.php?tipo=date&data=mese">PROSSIMI 30 GIORNI</a>
+    <a href="index.php?data=oggi&tipo=date">OGGI</a>
+    <a href="index.php?data=domani&tipo=date">DOMANI</a>
+    <a href="index.php?data=settimana&tipo=date">PROSSIMI 7 GIORNI</a>
+    <a href="index.php?data=mese&tipo=date">PROSSIMI 30 GIORNI</a>
 </div>
