--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -8,58 +8,60 @@
 </head>
 
 <body>
-    <div class="contorno">
-        <div class="boxTornaIndietro">
-            <div class="tornaIndietro">
-                <a href="../index.php?sez=biglietti">TORNA INDIETRO</a>
+    <div class="coloreEsterno">
+        <div class="contorno">
+            <div class="boxTornaIndietro">
+                <div class="tornaIndietro">
+                    <a href="../index.php?sez=biglietti">TORNA INDIETRO</a>
+                </div>
+
+                <div class="titoloAcquisto">
+                    <h1>$TITOLO$</h1>
+                </div>
             </div>
 
-            <div class="titoloAcquisto">
-                <h1>$TITOLO$</h1>
+            <div class="boxAcquistoBiglietto">
+                <div class="scrittaAcquistoBiglietto">
+                    Prenota biglietti
+                </div>
+
+                <form method="post" action="../html/prenotazione.html">
+                    <div class="numeroBigliettiAcquistoBiglietti">
+                        Numero biglietti:
+                        <select id="calcolatrice" onchange="calcola()">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                        </select>
+                        x $PREZZO$ &euro;
+                    </div>
+
+
+
+                    <div class="inserisciAcquistaBiglietto">
+                        Nome: <br> <input type="text" name="nome">
+                    </div>
+
+                    <div class="inserisciAcquistaBiglietto">
+                        Cognome: <br> <input type="text" name="cognome">
+                    </div>
+
+                    <div class="inserisciAcquistaBiglietto">
+                        E-mail di registrazioneal sito: <br>
+                        <input type="email" name="email">
+                    </div>
+
+
+                    <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+
+                </form>
             </div>
-        </div>
-
-        <div class="boxAcquistoBiglietto">
-            <div class="scrittaAcquistoBiglietto">
-                Prenota biglietti
-            </div>
-
-            <form method="post" action="../html/prenotazione.html">
-                <div class="numeroBigliettiAcquistoBiglietti">
-                    Numero biglietti:
-                    <select id="calcolatrice" onchange="calcola()">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                    </select>
-                    x $PREZZO$ &euro;
-                </div>
-
-
-
-                <div class="inserisciAcquistaBiglietto">
-                    Nome: <br> <input type="text" name="nome">
-                </div>
-
-                <div class="inserisciAcquistaBiglietto">
-                    Cognome: <br> <input type="text" name="cognome">
-                </div>
-
-                <div class="inserisciAcquistaBiglietto">
-                    E-mail di registrazioneal sito: <br>
-                    <input type="email" name="email">
-                </div>
-
-
-                <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
-
-            </form>
         </div>
     </div>
 </body>
