robe tante robe

--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -1,14 +1,13 @@
 <html>
     <head>
-        <title>Prenotazione effettuata</title>
+        <title>Prenotazione inviata</title>
     </head>
     <body>
-        <p>
-           Prenotazione effettuata!
-           Ha effettuato la prenotazione sotto le credenziali di: $NOME$ $COGNOME$.
-           L'evento da lei prenotato e' "$TITOLO$" che si terra' in data $DATA$.
-           Comunicheremo il numero di biglietti prenotati ($NUMERO$) agli organizzatori dell'evento, i quali provvederanno
-           ad inviarle una e-mail con luogo e giorni in cui sara' possibile ritirare il/i biglietto/i.
-        </p>
+        <h4>
+           La tua prenotazione e' stata presa in carico!
+           Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.
+           Buona Giornata!
+           Torna alla <a href="../index.php">Home del sito</a>.
+        </h4>
     </body>
 </html>
