--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -11,7 +11,7 @@
     <div class="contorno">
         <div class="boxTornaIndietro">
             <div class="tornaIndietro">
-                <a href="../index.php?pagina=$CITTA$">TORNA INDIETRO</a>
+                <a href="../index.php?sez=biglietti">TORNA INDIETRO</a>
             </div>
 
             <div class="titoloAcquisto">
@@ -24,7 +24,7 @@
                 Prenota biglietti
             </div>
 
-            <form method="post" action="../PHP/controlloPrenotazioni.php">
+            <form method="post" action="../html/prenotazione.html">
                 <div class="numeroBigliettiAcquistoBiglietti">
                     Numero biglietti:
                     <select id="calcolatrice" onchange="calcola()">
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="inserisciAcquistaBiglietto">
-                    E-mail: <br>
+                    E-mail di registrazioneal sito: <br>
                     <input type="email" name="email">
                 </div>
 
