--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -5,8 +5,8 @@
     <body>
         <h4>
            La tua prenotazione e' stata presa in carico!
-           Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.
-           Buona Giornata!
+           Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.<br>
+           Buona Giornata!<br>
            Torna alla <a href="../index.php">Home del sito</a>.
         </h4>
     </body>
