--- a/html/404.html
+++ b/html/404.html
@@ -1,10 +1,22 @@
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Pagina non trovata</title>
-        <link rel="stylesheet" type="text/css" href="../css/stile.css">
-    </head>
-    <body>
-        <h4>Errore : Pagina non trovata! :( </h4>
-        <p>Ti sei perso? Ritorna alla <a href="index.php">home</a> del sito</p>
-    </body>
+
+<head>
+    <title>404 | Pagina non trovata</title>
+    <link rel="stylesheet" type="text/css" href="css/stile.css">
+</head>
+
+<body>
+    <div class="box404">
+           <h1>404</h1>
+            Ops! Pagina non trovata! <br>
+            Ti sei perso? Ritorna alla <a href="index.php">home</a> del sito
+    </div>
+
+    <div class="immagine404">
+        <img src="images/404.png" alt="404">
+    </div>
+
+</body>
+
 </html>
