--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -3,11 +3,11 @@
         <title>Prenotazione inviata</title>
     </head>
     <body>
-        <h4>
+        <div class="messaggioPrenotazione">
            La tua prenotazione e' stata presa in carico!
            Provvederemo a verificare l'e-mail da lai inserita per accertarci che sia registrata! In caso affermativo contatteremo gli organizzatori che provvederenno a fornerle tutte le istruzioni direttamente alla casella mail da lei fornitoci.<br>
            Buona Giornata!<br>
            Torna alla <a href="../index.php">Home del sito</a>.
-        </h4>
+        </div>
     </body>
 </html>
