prenotazione biglietti funziona

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -25,10 +25,10 @@
                     Prenota biglietti
                 </div>
 
-                <form method="post" action="../html/prenotazione.html">
+                <form method="post" action="../php/prenotazioneBiglietti.php">
                     <div class="numeroBigliettiAcquistoBiglietti">
                         Numero biglietti:
-                        <select id="calcolatrice" onchange="calcola()">
+                        <select id="calcolatrice" onchange="calcola()" name="persone">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
