--- a/html/404.html
+++ b/html/404.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
     </head>
     <body>
-        <h4>Errore : Pagina non trovata! :( </h4>
+        <h4>Errore 404: Pagina non trovata! :( </h4>
         <p>Ti sei perso? Ritorna alla <a href="index.php">home</a> del sito</p>
     </body>
 </html>
