foto città home cambio codice hmtl

--- a/html/paginaHomeSito.html
+++ b/html/paginaHomeSito.html
@@ -5,17 +5,40 @@
     </p>
 
     <div class="foto">
-        <a href="index.php?pagina=padova"><img src="images/bottoniHome/padova.jpg" alt="padova"></a>
-        <a href="index.php?pagina=vicenza"><img src="images/bottoniHome/vicenza.jpg" alt="vicenza"/></a>
-        <a href="index.php?pagina=venezia"><img src="images/bottoniHome/venezia.jpg" alt="venezia"/></a>
-        <a href="index.php?pagina=verona"><img src="images/bottoniHome/verona.jpg" alt="verona"/></a>
-    </div>
+        <div class="boxFotoCitta">
+            <a href="index.php?pagina=padova"><img src="images/bottoniHome/padova.jpg" alt="padova"></a>
+            <div class="nomeCittaFoto">
+                <a href="index.php?pagina=padova">
+                    Padova
+                </a>
+            </div>
+        </div>
 
-    <div class="nomeCittaFoto">
-        <a href="index.php?pagina=padova"><p>Padova</p></a>
-        <a href="index.php?pagina=vicenza"><p>Vicenza</p></a>
-        <a href="index.php?pagina=venezia"><p>Venezia</p></a>
-        <a href="index.php?pagina=verona"><p>Verona</p></a>
-    </div>
+        <div class="boxFotoCitta">
+            <a href="index.php?pagina=vicenza"><img src="images/bottoniHome/vicenza.jpg" alt="vicenza" /></a>
+            <div class="nomeCittaFoto">
+                <a href="index.php?pagina=vicenza">
+                    Vicenza
+                </a>
+            </div>
+        </div>
 
-</div>
+        <div class="boxFotoCitta">
+            <a href="index.php?pagina=venezia"><img src="images/bottoniHome/venezia.jpg" alt="venezia" /></a>
+            <div class="nomeCittaFoto">
+                <a href="index.php?pagina=venezia">
+                    Venezia
+                </a>
+            </div>
+        </div>
+
+        <div class="boxFotoCitta">
+            <a href="index.php?pagina=verona"><img src="images/bottoniHome/verona.jpg" alt="verona" /></a>
+            <div class="nomeCittaFoto">
+                <a href="index.php?pagina=verona">
+                    Verona
+                </a>
+            </div>
+        </div>
+
+    </div>
