altra funzione java

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -58,7 +58,7 @@
                     </div>
 
 
-                    <input class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+                    <input onclick="myFunction()" class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
 
                 </form>
             </div>
@@ -67,3 +67,5 @@
 </body>
 
 </html>
+
+<script src="../JS/messaggioPrenotazione.js"></script>
