logo della scheda in alto inserito

--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Pagina di registrazione nuovo utente</title>
+    <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
 </head>
 
