--- a/html/404.html
+++ b/html/404.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>404 | Pagina non trovata</title>
+    <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="css/stile.css">
 </head>
 
