--- a/html/nuoviArticoli.html
+++ b/html/nuoviArticoli.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Nuovi Articoli</title>
+    <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
 </head>
 
