--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
     <title>Pagina profilo utente</title>
+    <link rel="icon" href="images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
 </head>
 
