--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -3,6 +3,12 @@
 
     <form class="ricerca" action="index.php?tipo=ricerca" method="post">
 
+        <div class="hamburger" onclick="effetto(this)">
+            <div class="linea1"></div>
+            <div class="linea2"></div>
+            <div class="linea3"></div>
+        </div>
+
         <div class="lenteSearch">
             <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
         </div>
@@ -14,4 +20,13 @@
     <div class="parolaLogin">
         $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
     </div>
+
+
+
+    <script>
+        function effetto(x) {
+            x.classList.toggle("change");
+        }
+
+    </script>
 </div>
