non so cosa ho modificato

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -1,13 +1,18 @@
 <div class="upnav">
     <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
 
-    <form class="ricerca" action="index.php?tipo=ricerca" method="post">
+    <div class="hamburger" onclick="apriMenu()">
+        <div class="linea1"></div>
+        <div class="linea2"></div>
+        <div class="linea3"></div>
+    </div>
 
-        <div class="hamburger" onclick="effetto(this)">
-            <div class="linea1"></div>
-            <div class="linea2"></div>
-            <div class="linea3"></div>
-        </div>
+    <div class="menuMobile">
+            porca troia puttanakmnommnomo ijionoioni inionoinioinooio noinoionoini noinoio noonbibol
+    </div>
+
+
+    <form class="ricerca" action="index.php?tipo=ricerca" method="post">
 
         <div class="lenteSearch">
             <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
@@ -22,11 +27,13 @@
     </div>
 
 
-
-    <script>
-        function effetto(x) {
-            x.classList.toggle("change");
-        }
-
-    </script>
 </div>
+
+
+<script>
+
+function apriMenu() {
+
+}
+
+</script>
