--- a/html/NavigationBarDown.html
+++ b/html/NavigationBarDown.html
@@ -1,12 +1,12 @@
 <div class="topnav">
     <a href="index.php?pagina=$CITTA$">HOME $LUOGO$</a>
-    <a href="index.php?sez=eventi">EVENTI</a>
-    <a href="index.php?sez=teatro">TEATRO</a>
-    <a href="index.php?sez=cucina">CUCINA</a>
-    <a href="index.php?sez=arte">ARTE</a>
-    <a href="index.php?sez=attrazioni">ATTRAZIONI</a>
-    <a href="index.php?sez=biglietti">BIGLIETTI</a>
-    <a href="index.php?sez=contatti">CONTATTI</a>
+    <a href="index.php?pagina=$CITTA$&sez=eventi">EVENTI</a>
+    <a href="index.php?pagina=$CITTA$&sez=teatro">TEATRO</a>
+    <a href="index.php?pagina=$CITTA$&sez=cucina">CUCINA</a>
+    <a href="index.php?pagina=$CITTA$&sez=arte">ARTE</a>
+    <a href="index.php?pagina=$CITTA$&sez=attrazioni">ATTRAZIONI</a>
+    <a href="index.php?pagina=$CITTA$&sez=biglietti">BIGLIETTI</a>
+    <a href="index.php?pagina=$CITTA$&sez=contatti">CONTATTI</a>
 </div>
 
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
