--- a/home.html
+++ b/home.html
@@ -1,9 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="it">
 
 <head>
+    <meta charset="UTF-8">
     <title>$TITOLO$</title>
-    <link rel="icon" href="images/logoPiccolo.ico" />
+    <link rel="icon" href="images/logoPiccolo.ico">
     <link rel="stylesheet" type="text/css" href="css/stile.css">
     <link rel="stylesheet" type="text/css" href="css/stileMobile.css">
 </head>
