--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -8,7 +8,39 @@
     </div>
 
     <div class="menuMobile">
-            porca troia puttanakmnommnomo ijionoioni inionoinioinooio noinoionoini noinoio noonbibol
+            <ul>
+                <li>
+                    <a class="selezione" href="">HOME $LUOGO$</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">EVENTI</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">TEATRO</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">CUCINA</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">ARTE</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">ATTRAZIONI</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">BIGLIETTI</a>
+                </li>
+
+                <li>
+                    <a class="selezione" href="">CONTATTI</a>
+                </li>
+            </ul>
     </div>
 
 
