--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -1,6 +1,38 @@
 <div class="upnav">
     <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
 
+    <div class="hamburger" onclick="apriMenu()">
+        <div class="linea1"></div>
+        <div class="linea2"></div>
+        <div class="linea3"></div>
+    </div>
+
+    <div id="menuMobile">
+
+        <a href="">HOME $LUOGO$</a>
+
+        <a href="">EVENTI</a>
+
+        <a href="">TEATRO</a>
+
+        <a href="">CUCINA</a>
+
+        <a href="">ARTE</a>
+
+        <a href="">ATTRAZIONI</a>
+
+        <a href="">BIGLIETTI</a>
+
+        <a href="">CONTATTI</a>
+
+
+    </div>
+
+
+
+
+
+
     <form class="ricerca" action="index.php?tipo=ricerca" method="post">
 
         <div class="lenteSearch">
@@ -15,3 +47,15 @@
         $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
     </div>
 </div>
+
+<script>
+    function apriMenu() {
+    var x = document.getElementById("menuMobile");
+    if (x.style.display === "block") {
+        x.style.display = "none";
+    } else {
+        x.style.display = "block";
+    }
+}
+
+</script>
