--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>$TITOLO$</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/logoPiccolo.ico">
     <link rel="stylesheet" type="text/css" href="css/stile.css">
     <link rel="stylesheet" type="text/css" href="css/stileMobile.css">
