nome sezione per mobile

--- a/home.html
+++ b/home.html
@@ -17,6 +17,10 @@
 
         $DOWN$
 
+        <div class="sezioneMobile">
+            $SEZIONE$
+        </div>
+
         $PAGINA$
 
         <div class="spingiGiu">
