--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -9,6 +9,12 @@
 
     <div id="menuMobile">
 
+        <div class="ricercaPiccola">
+            <form class="ricerca" action="index.php?tipo=ricerca" method="post">
+                <input type="text" placeholder=" Cerca..." name="cerca">
+            </form>
+        </div>
+
         <a href="index.php?pagina=$CITTA$">HOME $LUOGO$</a>
 
         <a href="index.php?pagina=$CITTA$&sez=eventi">EVENTI</a>
@@ -32,16 +38,17 @@
 
 
 
+    <div class="ricercaGrande">
+        <form class="ricerca" action="index.php?tipo=ricerca" method="post">
 
-    <form class="ricerca" action="index.php?tipo=ricerca" method="post">
-
-        <div class="lenteSearch">
-            <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
-        </div>
+            <div class="lenteSearch">
+                <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
+            </div>
 
 
-        <input type="text" placeholder=" Cerca..." name="cerca">
-    </form>
+            <input type="text" placeholder=" Cerca..." name="cerca">
+        </form>
+    </div>
 
     <div class="parolaLogin">
         $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
@@ -50,16 +57,17 @@
 
 <script>
     function apriMenu() {
-    var x = document.getElementById("menuMobile");
-    if (x.style.display === "block") {
-        x.style.display = "none";
-    } else {
-        x.style.display = "block";
+        var x = document.getElementById("menuMobile");
+        if (x.style.display === "block") {
+            x.style.display = "none";
+        } else {
+            x.style.display = "block";
+        }
     }
-}
 
 
- function effetto(x) {
-    x.classList.toggle("change");
-}
+    function effetto(x) {
+        x.classList.toggle("change");
+    }
+
 </script>
