sezione contatti sistemata

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -15,7 +15,7 @@
     </form>
 
     <div class="parolaLogin">
-        $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+        $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
     </div>
 
 
