--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -55,19 +55,5 @@
     </div>
 </div>
 
-<script>
-    function apriMenu() {
-        var x = document.getElementById("menuMobile");
-        if (x.style.display === "block") {
-            x.style.display = "none";
-        } else {
-            x.style.display = "block";
-        }
-    }
-
-
-    function effetto(x) {
-        x.classList.toggle("change");
-    }
-
-</script>
+<script src="JS/apriMenu.js"></script>
+<script src="JS/effetto.js"></script>
