modifica nomi funzioni

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -58,7 +58,7 @@
                     </div>
 
 
-                    <input onclick="myFunction()" class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+                    <input onclick="prenotazione()" class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
 
                 </form>
             </div>
