--- a/html/bottonea.html
+++ b/html/bottonea.html
@@ -1,3 +1,3 @@
-<a href="html/registrazione.html">REGISTRATI</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="html/registrazione.html">REGISTRATI</a>&nbsp;&nbsp;
 <a href="html/accesso.html">ACCEDI</a>
 
