--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -1,6 +1,8 @@
 <div class="upnav">
     <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
 
+    <a href="index.php"><img class="miniLogo" src="images/logoPiccolo.ico" alt="Veneto in mostra"></a>
+
     <div class="hamburger" onclick="apriMenu(); effetto(this);">
         <div class="linea1"></div>
         <div class="linea2"></div>
