logo, account, footer imamgini home, .....

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -1,7 +1,13 @@
 <div class="upnav">
+    <div class="account" onclick="">
+        <img src="images/account.png" alt="login">
+    </div>
+
     <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
 
-    <a href="index.php"><img class="miniLogo" src="images/logoPiccolo.ico" alt="Veneto in mostra"></a>
+    <div class="miniLogo">
+        <a href="index.php"><img src="images/logoPiccolo.ico" alt="Veneto in mostra"></a>
+    </div>
 
 
 
@@ -17,6 +23,7 @@
         </form>
 
     </div>
+
     <div class="parolaLogin">
         $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
     </div>
