--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -1,7 +1,13 @@
 <div class="upnav">
+    <div class="account">
+        <img src="images/account.png" alt="login">
+    </div>
+
     <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
 
-    <a href="index.php"><img class="miniLogo" src="images/logoPiccolo.ico" alt="Veneto in mostra"></a>
+    <div class="miniLogo">
+        <a href="index.php"><img src="images/logoPiccolo.ico" alt="Veneto in mostra"></a>
+    </div>
 
     <div class="hamburger" onclick="apriMenu(); effetto(this);">
         <div class="linea1"></div>
