risolto classe foto home

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -1,5 +1,5 @@
 <div class="upnav">
-    <div class="account" onclick="">
+    <div class="account" onclick="apriLogin()">
         <img src="images/account.png" alt="login">
     </div>
 
@@ -24,9 +24,18 @@
 
     </div>
 
+    <div id="menuAccedi">
+        $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+    </div>
+
+
+
     <div class="parolaLogin">
         $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
     </div>
 
 
 </div>
+
+
+<script src="JS/apriLogin.js"></script>
