--- a/html/NavigationBarUp2.html
+++ b/html/NavigationBarUp2.html
@@ -1,5 +1,5 @@
 <div class="upnav">
-    <div class="account">
+    <div class="account" onclick="apriLogin()">
         <img src="images/account.png" alt="login">
     </div>
 
@@ -14,6 +14,8 @@
         <div class="linea2"></div>
         <div class="linea3"></div>
     </div>
+
+
 
     <div id="menuMobile">
 
@@ -42,9 +44,10 @@
 
     </div>
 
+    <div id="menuAccedi">
+            $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
 
-
-
+    </div>
 
     <div class="ricercaGrande">
         <form class="ricerca" action="index.php?tipo=ricerca" method="post">
@@ -65,3 +68,4 @@
 
 <script src="JS/apriMenu.js"></script>
 <script src="JS/effetto.js"></script>
+<script src="JS/apriLogin.js"></script>
