--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -5,6 +5,7 @@
     <title>Prenotazione Biglietto</title>
     <link rel="icon" href="../images/logoPiccolo.ico" />
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
+    <link rel="stylesheet" type="text/css" href="../css/stileMobile.css">
 </head>
 
 <body>
