--- a/html/prenotazione.html
+++ b/html/prenotazione.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Prenotazione inviata</title>
+        <link rel="icon" href="../images/logoPiccolo.ico">
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
     </head>
 
