--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -46,21 +46,20 @@
 
 
                     <div class="inserisciAcquistaBiglietto">
-                        Nome: <br> <input type="text" name="nome">
+                        <label for="nome">Nome:</label> <br> <input type="text" id="nome" name="nome">
                     </div>
 
                     <div class="inserisciAcquistaBiglietto">
-                        Cognome: <br> <input type="text" name="cognome">
+                        <label for="cognome">Cognome:</label> <br> <input type="text" id="cognome" name="cognome">
                     </div>
 
                     <div class="inserisciAcquistaBiglietto">
-                        E-mail di registrazioneal sito: <br>
+                        <label for="email">E-mail di registrazione al sito:</label> <br>
                         <input type="email" name="email">
                     </div>
 
 
                     <input onclick="prenotazione()" class="prenota" type="submit" name="PRENOTAZIONE" value="PRENOTA">
-
                 </form>
             </div>
         </div>
