torna indietro da prenotazione biglietto sistemato

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -13,7 +13,7 @@
         <div class="contorno">
             <div class="boxTornaIndietro">
                 <div class="tornaIndietro">
-                    <a href="../index.php?sez=biglietti">TORNA INDIETRO</a>
+                    <a href="../index.php?pagina=$CITTA$&sez=biglietti">TORNA INDIETRO</a>
                 </div>
 
                 <div class="titoloAcquisto">
