prenotazione biglietto se sei loggato migliorata

--- a/html/prenotazioniBiglietto.html
+++ b/html/prenotazioniBiglietto.html
@@ -54,8 +54,8 @@
                     </div>
 
                     <div class="inserisciAcquistaBiglietto">
-                        <label for="email">E-mail di registrazione al sito:</label> <br>
-                        <input type="email" name="email">
+                        <label for="email">E-mail di registrazione al sito:</label> <br><br>
+                        $EMAIL$
                     </div>
 
 
