profilo utente centrato

--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="it">
+
 <head>
     <title>Pagina profilo utente</title>
     <link rel="icon" href="../images/logoPiccolo.ico" />
@@ -12,8 +13,10 @@
         IL TUO PROFILO
     </div>
 
-    <div class="testa">
-        I tuoi dati:
+    <div class="boxTesta">
+        <div class="testa">
+            I tuoi dati:
+        </div>
     </div>
 
     <div class="inserisciDati">
@@ -35,26 +38,26 @@
     </div>
 
     <form class="inserisciDati" method="POST" action="../php/modificapsw.php">
-       <fieldset>
-        <div class="input">
-            <label for="vecchiaPw">Vecchia Password:</label>
-            <input type="password" id="vecchiaPw" name="Vecchiapsw">
-        </div>
+        <fieldset>
+            <div class="input">
+                <label for="vecchiaPw">Vecchia Password:</label>
+                <input type="password" id="vecchiaPw" name="Vecchiapsw">
+            </div>
 
-        <div class="input">
-            <label for="nuovaPw">Nuova password:</label>
-            <input type="password" id="nuovaPw" name="Nuovapsw">
-        </div>
+            <div class="input">
+                <label for="nuovaPw">Nuova password:</label>
+                <input type="password" id="nuovaPw" name="Nuovapsw">
+            </div>
 
-        <div class="input">
-            <label for="nuovaPw2">Conferma nuova password:</label>
-            <input type="password" id="nuovaPw2" name="Nuovapsw2">
-        </div>
+            <div class="input">
+                <label for="nuovaPw2">Conferma nuova password:</label>
+                <input type="password" id="nuovaPw2" name="Nuovapsw2">
+            </div>
 
-        <div class="bottonee">
-            <input type="submit" class="btn" name="CAMBIAPSW" value="MODIFICA">
-        </div>
-      </fieldset>
+            <div class="bottonee">
+                <input type="submit" class="btn" name="CAMBIAPSW" value="MODIFICA">
+            </div>
+        </fieldset>
     </form>
 
     <div class='box_errore'>$MESSAGGIO$</div>
@@ -69,4 +72,5 @@
         Torna alla <a href="../index.php">home</a> del sito
     </div>
 </body>
+
 </html>
