--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -8,47 +8,48 @@
 </head>
 
 <body>
-
-    <div class="testa">
-        Registrazione
+    <div class="boxTesta">
+        <div class="testa">
+            Registrazione
+        </div>
     </div>
 
     <form class="inserisciDati" method="POST" action="../php/registrazione.php">
-       <fieldset>
-        <div class="input">
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="Email">
-        </div>
+        <fieldset>
+            <div class="input">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="Email">
+            </div>
 
-        <div class="input">
-            <label for="un">Username:</label>
-            <input type="text" id="un" name="Username">
-        </div>
+            <div class="input">
+                <label for="un">Username:</label>
+                <input type="text" id="un" name="Username">
+            </div>
 
-        <div class="input">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="Nome">
-        </div>
+            <div class="input">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="Nome">
+            </div>
 
-        <div class="input">
-            <label for="cognome">Cognome:</label>
-            <input type="text" id="cognome" name="Cognome">
-        </div>
+            <div class="input">
+                <label for="cognome">Cognome:</label>
+                <input type="text" id="cognome" name="Cognome">
+            </div>
 
-        <div class="input">
-            <label for="pw">Password (minimo 8 caratteri):</label>
-            <input type="Password" id="pw" name="Password">
-        </div>
+            <div class="input">
+                <label for="pw">Password (minimo 8 caratteri):</label>
+                <input type="Password" id="pw" name="Password">
+            </div>
 
-        <div class="input">
-            <label for="pw2">Conferma Password:</label>
-            <input type="Password" id="pw2" name="Password2">
-        </div>
+            <div class="input">
+                <label for="pw2">Conferma Password:</label>
+                <input type="Password" id="pw2" name="Password2">
+            </div>
 
-        <div class="bottonee">
-            <input type="submit" name="REGISTRATI" value="REGISTRATI">
-        </div>
-      </fieldset>
+            <div class="bottonee">
+                <input type="submit" name="REGISTRATI" value="REGISTRATI">
+            </div>
+        </fieldset>
     </form>
 
     <div class="linkAccessoRegistra">
